@@ -10,6 +10,7 @@ Jump Start Changelog
 * Admin jQuery improvements for 1.9 - Converted all .live() to .on()
 * Fixed `ThemeBlvd_Select_Menu_Walker::start_el()` PHP 5.4 strict error.
 * Fixed CSS overflow quirk with Nivo slider type.
+* Fixed IE8 Carrousel slider display bug.
 
 1.1.2
 -----
